[tool.poetry]
name = "processpy"
version = "0.1.0"
description = "Python Process Manager"
authors = [
    "Nazmul Hasan <edufornazmul@gmail.com>"
]

license = "MIT"
readme = "README.md"
repository = "https://github.com/nazmulnnb/processpy"

classifiers = [
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3 :: Only',
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
